Mapping the data of postApi using useState in the CountryPage.

--- a/world-atlas-using-react-19/src/App.css
+++ b/world-atlas-using-react-19/src/App.css
@@ -598,3 +598,9 @@
     justify-content: center;
     align-items: center;
   }
+
+  .brightColor{
+    color: white;
+    font-weight: 900;
+    font-size: large;
+  }
